--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     </head>
     <body>
         <header>
-            <h1>Your Name</h1>
+            <h1>Jared Siriba</h1>
         </header>
         <div>
             <section>
                 <h2>About me</h2>
-                <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
+                <img id="bio-image" src="assets/images/bio.jpg" alt="Jared Siriba">
 
-                <p>Write a short paragraph or two about yourself, or use placeholder text from <a href="http://www.lipsum.com/">www.lipsum.com</a></p>
+                <p>Hello my name is Jared Siriba from Bloomington MN. I love technology and what it can do. Besides my interest in coding, I love the out doors and in the summer I enjoy to play tennis. </a></p>
             </section>
         </div>
-
+        <footer>
+            <h10>Copy write Jared Siriba</h10>
+        </footer>
     </body>
